# CodeCompass

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: fixtures.rs  scan_bench.rs
src-tauri/examples/: bench_summary.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql  V2__indexed_folders_and_scan_runs.sql  V3__file_fingerprints_and_present_state.sql  V4__import_relationships.sql  V5__symbols.sql  V6__symbol_references.sql  V7__workspace_settings_and_git_tracking.sql  V8__scan_generation.sql  V9__line_count.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/analysis/: call_graph.rs  css_analyzer.rs  entrypoint.rs  evolution.rs  findings.rs  graph.rs  health.rs  impact.rs  mod.rs  plugin.rs  reading_path.rs  references.rs  resolver.rs  runner.rs  symbols.rs  ts_js.rs
src-tauri/src/commands/: analysis.rs  application.rs  database.rs  evolution.rs  git.rs  graph.rs  health.rs  impact.rs  insights.rs  mod.rs  plugin.rs  source.rs  symbols.rs  workspaces.rs
src-tauri/src/db/: analysis.rs  connection.rs  imports.rs  indexed_files.rs  indexed_folders.rs  mod.rs  references.rs  scan_runs.rs  symbols.rs  workspace_settings.rs
src-tauri/src/git/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/tests/: failure_paths.rs  fixture_project.rs
(+61 files in other folders)
