[package]
name = "codecompass"
version = "0.4.0"
description = "A local-first desktop application for understanding unfamiliar codebases"
authors = ["Jelly-RayTian"]
license = "MIT"
repository = "https://github.com/Jelly-RayTian/CodeCompass"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codecompass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
thiserror = "1"
walkdir = "2"
dunce = "1"
oxc_parser = "0.45"
oxc_ast = "0.45"
oxc_span = "0.45"
oxc_allocator = "0.45"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmark harness. `bench` targets require the criterion harness.
[[bench]]
name = "scan_bench"
harness = false
path = "benches/scan_bench.rs"
